LPS-113405 Wrap with bdi tag avoiding issues with special characters and use the text-truncase clay css class

--- a/modules/apps/redirect/redirect-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/redirect/redirect-web/src/main/resources/META-INF/resources/css/main.scss
@@ -42,11 +42,7 @@
 		text-transform: uppercase;
 	}
 
-	.table-cell-expand {
+	.text-truncate-reverse {
 		direction: rtl;
-		overflow: hidden;
-		text-align: left;
-		text-overflow: ellipsis;
-		white-space: nowrap;
 	}
 }
